--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 .top{
     width:100%;
     height: 256px;
-    background-image: url('./images/background-pattern-desktop.svg');
+    background-image: url('background-pattern-desktop.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
